<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailsActivity"
        android:padding="8dp"
        android:background="@color/green_light">

        <TextView
            android:id="@+id/textMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="casual"
            android:text="@string/feliz_2_meses"
            android:textAllCaps="true"
            android:textColor="@color/purple_700"
            android:textSize="32sp"
            android:textStyle="bold|italic"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageLeft"
            android:layout_width="0dp"
            android:layout_height="128dp"
            android:src="@mipmap/image_left"
            android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@+id/textMessage"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/imageCenter"/>

        <ImageView
            android:id="@+id/imageCenter"
            android:layout_width="0dp"
            android:layout_height="128dp"
            android:src="@mipmap/image_center"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textMessage"
            app:layout_constraintLeft_toRightOf="@id/imageLeft"
            app:layout_constraintRight_toLeftOf="@id/imageRight"
            />

        <ImageView
            android:id="@+id/imageRight"
            android:layout_width="0dp"
            android:layout_height="128dp"
            android:src="@mipmap/image_right"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textMessage"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/imageCenter"/>

        <TextView
            android:id="@+id/textDescription1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="casual"
            android:text="@string/text1"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:padding="4dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageCenter" />

        <TextView
            android:id="@+id/textDescription2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="casual"
            android:text="@string/text2"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textDescription1" />

        <ImageView
            android:id="@+id/imageFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_favorite_foreground"
            app:layout_constraintTop_toBottomOf="@+id/textDescription2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/textDescription3"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/textDescription3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/text3"
            android:textAlignment="center"
            android:textColor="#FF0000"
            android:textSize="24sp"
            android:textStyle="italic|bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
